--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,16 @@
 name: CI
 
 on:
-  schedule:
-    - cron: '*/10 * * * *'
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo hello world
+      - run: |
+        if [ -f "main.py" ]; then
+          echo hello world
+        fi
