--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: |
-        if [ -f "main.py" ]; then
-          echo hello world
+      - run: if [ -if "main_py" ]; then
+        echo "True"
+        else
+        echo "False"
         fi
+      - run: echo hello world
