--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: if [ -if "main_py" ]; then
-        echo "True"
-        else
-        echo "False"
-        fi
+      - run: if [ -if "main_py" ]; then echo "True" else echo "False" fi
       - run: echo hello world
