--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          if [ -f "main_py" ]; then
-            echo "True"
-          else
-            echo "False"
+          if [ ! -f "main.py" ]; then
+            echo "main.py does not exist"
+            exit 1
           fi
-      - run: echo hello world
+      - run: |
+          python main.py
