--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "hello, world!"
+      - run: |
+          if [ ! -f "main.py" ]; then
+            echo "main.py does not exist"
+            exit 1
+          fi
       - run: |
           python main.py
