--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,25 +6,22 @@ on:
       - main
 
 jobs:
-  build:
-    name: Create Release
+  release:
     runs-on: ubuntu-latest
-    permissions:
-        contents: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Changes in this Release
-            - First Change
-            - Second Change
+            Automated release created from tag ${{ github.ref }}.
+            See changes in the commit history.
           draft: false
           prerelease: false
