--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref_name }}
           body: |
-            Automated release created from tag ${{ github.ref }}.
+            Automated release created from tag ${{ github.ref_name }}.
             See changes in the commit history.
           draft: false
           prerelease: false
