--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Run Python script
+        run: python main.py
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
