--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Python script
-        run: python main.py
+        run: python test.py
 
       - name: Create Release
         id: create_release
