--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run test script
+        run: python test.py
   release:
     runs-on: ubuntu-latest
     permissions:
@@ -13,9 +18,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Run Python script
-        run: python test.py
 
       - name: Create Release
         id: create_release
